fix nasty cmake bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ foreach (backend ${camp_backends})
   if ("${ENABLE_${suffix}}")
     set ("CAMP_ENABLE_${suffix}" On)
   endif()
-  if ("CAMP_ENABLE_${suffix}")
+  if (${CAMP_ENABLE_${suffix}})
     if (backend IN_LIST camp_runtime_backends)
       set (backend ${backend}_runtime)  
     endif()
