--- a/cmake/campConfig.cmake.in
+++ b/cmake/campConfig.cmake.in
@@ -2,6 +2,10 @@
 
 set(camp_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@" CACHE FILEPATH "camp install prefix path")
 
+if (@CAMP_ENABLE_CUDA@)
+  find_dependency(Threads)
+endif ()
+
 include("${CMAKE_CURRENT_LIST_DIR}/campTargets.cmake")
 check_required_components("@PROJECT_NAME@")
 
