--- a/cmake/campConfig.cmake.in
+++ b/cmake/campConfig.cmake.in
@@ -7,5 +7,6 @@ include("${BLT_TGTS}")
 endif()
 unset(BLT_TGTS)
 include("${CMAKE_CURRENT_LIST_DIR}/campTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/BLTSetupTargets.cmake")
 check_required_components("@PROJECT_NAME@")
 
