Add std::array-like class (#146)
* Add camp::array as a portable alternative to std::array
* Add portable testing infrastructure
* Register gtests with ctest for filtering (which requires CMake 3.10)

---------

Co-authored-by: Jason Burmark <MrBurmark@users.noreply.github.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ variables:
   ver: latest
   pre_cmd: true
   build_type: RelWithDebInfo
-  ctest_extra: "-E '(.*offload|blt.*smoke)'"
+  # Disable cuda and hip tests since there are no GPUs on these platforms
+  ctest_extra: "-E '(.*offload|blt.*smoke|cuda_.*|hip_.*|CampEvent|CampResource)'"
   cmake_extra: ""
   parallel: 4
   cmake_build_opts: "--build build --verbose --parallel $(parallel)"
