--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(GoogleTest)
+
 function(camp_add_test TESTNAME)
   cmake_parse_arguments(ABT "GTEST;RUN;OFFLOAD" "" "BUILD;TEST;DEPENDS_ON" ${ARGN})
 
@@ -40,13 +42,13 @@ function(camp_add_test TESTNAME)
     DEPENDS_ON ${_depends}
     FOLDER test)
 
-  # The test itself
-  add_test(NAME ${TESTNAME}
-    COMMAND ${TESTNAME}
-    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/test
-    ${TEST})
+  # This teaches ctest about each gtest so that ctest filtering can be used
+  # in azure-pipelines.yml
+  gtest_discover_tests(${TESTNAME}
+                       WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/test)
 endfunction()
 
+camp_add_test(array GTEST)
 camp_add_test(resource GTEST OFFLOAD)
 camp_add_test(tuple GTEST)
 
